@@ -1,4 +1,4 @@
-AC_INIT(fuse, 2.6.1)
+AC_INIT(fuse, 2.6.2)
 AC_CANONICAL_TARGET
 AM_INIT_AUTOMAKE
 AM_CONFIG_HEADER(include/config.h)
